--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,5 +16,5 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
-            - run: curl -L https://install.dojoengine.org | bash && source ~/.bashrc && dojoup
+            - run: curl -L https://install.dojoengine.org | bash && source /home/runner/.bashrc && dojoup
 
