--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,5 +16,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
-            - run: curl -L https://install.dojoengine.org | bash && source /home/runner/.bashrc && dojoup
+            - run: curl -L https://install.dojoengine.org | bash 
+            - run: source /home/runner/.bashrc 
+            - run: dojoup
 
