--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,5 +17,5 @@ jobs:
         steps:
             - uses: actions/checkout@v3
             - run: curl -L https://install.dojoengine.org | bash
-            - run: /home/runner/.config/.dojo/bin/dojoup
+            - run: /home/runner/.config/.dojo/bin/dojoup -v nightly
             - run: for dir in ./examples/* ; do cd $dir && /home/runner/.config/.dojo/bin/sozo build && /home/runner/.config/.dojo/bin/sozo test && cd ../..; done;
