--- a/examples/harberger-tax/Scarb.toml
+++ b/examples/harberger-tax/Scarb.toml
@@ -7,7 +7,7 @@ version = "0.1.0"
 sierra-replace-ids = true
 
 [dependencies]
-dojo = { git = "https://github.com/dojoengine/dojo", tag="v0.3.0-rc9"}
+dojo = { git = "https://github.com/dojoengine/dojo" }
 openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.7.0" }
 
 [[target.dojo]]
